# HSO

./: FlowGPU.flo  README.md  a.out  addKernel.dp.hpp.yaml  derivativesKernel.dp.hpp.yaml  downscaleKernel.dp.hpp  downscaleKernel.dp.hpp.yaml  flowCUDA.dp.cpp  main.cpp.dp.cpp  solverKernel.dp.hpp.yaml  upscaleKernel.dp.hpp.yaml  warpingKernel.dp.hpp.yaml
.ipynb_checkpoints/: addKernel.dp-checkpoint.hpp  derivativesKernel.dp-checkpoint.hpp  solverKernel.dp-checkpoint.hpp  upscaleKernel.dp-checkpoint.hpp  warpingKernel.dp-checkpoint.hpp
03_sycl_migrated/: main.cpp  warpingKernel.hpp
dpct_migrated/: FlowCPU.flo  FlowGPU.flo  a.out  common.h  derivativesKernel.hpp  downscaleKernel.hpp  flowCUDA.cpp  main.cpp  upscaleKernel.hpp
dpct_out/: MainSourceFiles.yaml
sycl_dpct_migrated/: CMakeLists.txt  addKernel.hpp  downscaleKernel.hpp  flowCUDA.cpp  flowGold.cpp  solverKernel.hpp  upscaleKernel.hpp  warpingKernel.hpp
sycl_dpct_migrated/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  derivativesKernel-checkpoint.hpp  flowGold-checkpoint.cpp  main-checkpoint.cpp  solverKernel-checkpoint.hpp
sycl_dpct_output/: derivativesKernel.dp.hpp
sycl_migrated/: FlowGPU.flo  a.out  addKernel.hpp  derivativesKernel.hpp  downscaleKernel.hpp  flowCUDA.cpp  flowGold.cpp  solverKernel.hpp  upscaleKernel.hpp  warpingKernel.hpp
sycl_migrated2/: addKernel.hpp  common.h  derivativesKernel.hpp  downscaleKernel.hpp  solverKernel.hpp  upscaleKernel.hpp  warpingKernel.hpp
sycl_migrated_optimized/: derivativesKernel.hpp  downscaleKernel.hpp  flowCUDA.cpp  solverKernel.hpp  upscaleKernel.hpp  (+1 more)
(+104 files in other folders)
